Update to Java 9